--- a/scss/sections/_languages.scss
+++ b/scss/sections/_languages.scss
@@ -9,8 +9,9 @@
     position: relative;
 
     img {
-      height: 100%;
+      // height: 100%;
       &:hover {
+        -webkit-filter: grayscale(120);
         filter: grayscale(120);
       }
     }
